Finished Dry Estimator and added it to the API
