# backend/stub/swagger_server/controllers/estimation_controller.py
@@ -1,0 +1,24 @@
+import connexion
+import six
+
+from swagger_server.models.inline_response2009 import InlineResponse2009  # noqa: E501
+from swagger_server import util
+
+
+def controller_estimate_drying_time(temp, humid, wind_kph, width=None):  # noqa: E501
+    """Estimate drying time based on temperature, humidity, and wind.
+
+     # noqa: E501
+
+    :param temp: Temperature in Celsius
+    :type temp: float
+    :param humid: Relative humidity (0-100)
+    :type humid: float
+    :param wind_kph: Wind speed in km/h
+    :type wind_kph: float
+    :param width: Material thickness (default &#x3D; 2)
+    :type width: float
+
+    :rtype: InlineResponse2009
+    """
+    return 'do some magic!'
