# backend/stub/swagger_server/models/inline_response2009.py
@@ -1,0 +1,89 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server.models.inline_response2009_input import InlineResponse2009Input  # noqa: F401,E501
+from swagger_server import util
+
+
+class InlineResponse2009(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, estimated_drying_time_hours: int=None, input: InlineResponse2009Input=None):  # noqa: E501
+        """InlineResponse2009 - a model defined in Swagger
+
+        :param estimated_drying_time_hours: The estimated_drying_time_hours of this InlineResponse2009.  # noqa: E501
+        :type estimated_drying_time_hours: int
+        :param input: The input of this InlineResponse2009.  # noqa: E501
+        :type input: InlineResponse2009Input
+        """
+        self.swagger_types = {
+            'estimated_drying_time_hours': int,
+            'input': InlineResponse2009Input
+        }
+
+        self.attribute_map = {
+            'estimated_drying_time_hours': 'estimated_drying_time_hours',
+            'input': 'input'
+        }
+        self._estimated_drying_time_hours = estimated_drying_time_hours
+        self._input = input
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'InlineResponse2009':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The inline_response_200_9 of this InlineResponse2009.  # noqa: E501
+        :rtype: InlineResponse2009
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def estimated_drying_time_hours(self) -> int:
+        """Gets the estimated_drying_time_hours of this InlineResponse2009.
+
+
+        :return: The estimated_drying_time_hours of this InlineResponse2009.
+        :rtype: int
+        """
+        return self._estimated_drying_time_hours
+
+    @estimated_drying_time_hours.setter
+    def estimated_drying_time_hours(self, estimated_drying_time_hours: int):
+        """Sets the estimated_drying_time_hours of this InlineResponse2009.
+
+
+        :param estimated_drying_time_hours: The estimated_drying_time_hours of this InlineResponse2009.
+        :type estimated_drying_time_hours: int
+        """
+
+        self._estimated_drying_time_hours = estimated_drying_time_hours
+
+    @property
+    def input(self) -> InlineResponse2009Input:
+        """Gets the input of this InlineResponse2009.
+
+
+        :return: The input of this InlineResponse2009.
+        :rtype: InlineResponse2009Input
+        """
+        return self._input
+
+    @input.setter
+    def input(self, input: InlineResponse2009Input):
+        """Sets the input of this InlineResponse2009.
+
+
+        :param input: The input of this InlineResponse2009.
+        :type input: InlineResponse2009Input
+        """
+
+        self._input = input
